--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
         wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/boost_169.zip
         unzip boost_169.zip -d boost_169 || :
         cd boost_169
+        chmod +x b2
         ./b2 install toolset=clang
     - name: install protobuf
       working-directory: ${{ github.workspace }}
