--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,11 @@ jobs:
     - name: install protobuf
       working-directory: ${{ github.workspace }}
       run: |
-        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
-        unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
-        cd protobuf-3.6.1/build_make
-        make install
+        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-osx-x86_64.zip
+        unzip protoc-3.6.1-osx-x86_64.zip -d protoc-3.6.1-osx-x86_64 || :
+        mkdir -p /usr/local/include/google
+        mv protoc-3.6.1-osx-x86_64/include/google/protobuf /usr/local/include/google
+        mv protoc-3.6.1-osx-x86_64/bin/protoc /usr/local/bin/
     - name: install Catch2
       working-directory: ${{ github.workspace }}
       run: |
