--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,10 @@ jobs:
     - name: install protobuf
       working-directory: ${{ github.workspace }}
       run: |
-        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protoc-3.6.1-osx-x86_64.zip
-        unzip protoc-3.6.1-osx-x86_64.zip -d protoc-3.6.1-osx-x86_64 || :
+        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
+        unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
+        cd protobuf-3.6.1/build_make
+        make install
     - name: install Catch2
       working-directory: ${{ github.workspace }}
       run: |
@@ -46,7 +48,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/protoc-3.6.1-osx-x86_64/ -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/protoc-3.6.1-osx-x86_64/include
+        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/
         make
     - uses: actions/upload-artifact@v1
       with:
