--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,14 +29,8 @@ jobs:
     - name: install protobuf
       working-directory: ${{ github.workspace }}
       run: |
-        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.tar.gz -O /tmp/protobuf-all-3.6.1.tar.gz
-        tar xzvf /tmp/protobuf-all-3.6.1.tar.gz
-        cd protobuf-3.6.1
-        mkdir build_make
-        cd build_make
-        cmake ../cmake
-        make
-        make install
+        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
+        unzip protoc-3.6.1-osx-x86_64.zip -d protoc-3.6.1-osx-x86_64 || :
     - name: install Catch2
       working-directory: ${{ github.workspace }}
       run: |
@@ -52,7 +46,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/
+        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/usr/local/ -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/usr/local/include/
         make
     - uses: actions/upload-artifact@v1
       with:
