--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Install brew dependencies
       run: |
         brew install openssl zlib cmake wget git
+    - name: install protobuf
+      working-directory: ${{ github.workspace }}
+      run: |
+        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
+        unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
     - uses: actions/checkout@v2
       name: 'Checkout'
     - name: install boost
@@ -26,11 +31,6 @@ jobs:
         cd boost_169
         chmod +x b2
         ./b2 install toolset=clang
-    - name: install protobuf
-      working-directory: ${{ github.workspace }}
-      run: |
-        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
-        unzip protoc-3.6.1-osx-x86_64.zip -d protoc-3.6.1-osx-x86_64 || :
     - name: install Catch2
       working-directory: ${{ github.workspace }}
       run: |
@@ -46,7 +46,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/usr/local/ -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/usr/local/include/
+        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/protobuf-3.6.1/usr/local/ -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/protobuf-3.6.1/usr/local/include/
         make
     - uses: actions/upload-artifact@v1
       with:
