--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
         unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
+        chmod -R 777 protobuf-3.6.1
     - uses: actions/checkout@v2
       name: 'Checkout'
     - name: install boost
