--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
       run: |
         wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
         unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
-        ls -R protobuf-3.6.1
+        pwd
+        ls -lR protobuf-3.6.1
     - uses: actions/checkout@v2
       name: 'Checkout'
     - name: install boost
