--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,6 @@ jobs:
       run: |
         wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
         unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
-        pwd
-        ls -lR protobuf-3.6.1
     - uses: actions/checkout@v2
       name: 'Checkout'
     - name: install boost
@@ -48,7 +46,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/protobuf-3.6.1/usr/local/ -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/protobuf-3.6.1/usr/local/include/
+        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/protobuf-3.6.1/usr/local/lib -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/protobuf-3.6.1/usr/local/include/
         make
     - uses: actions/upload-artifact@v1
       with:
