--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,6 @@ jobs:
     - name: Install brew dependencies
       run: |
         brew install openssl zlib cmake wget git
-    - name: install protobuf
-      working-directory: ${{ github.workspace }}
-      run: |
-        wget https://localproxy-binaries.s3-us-west-2.amazonaws.com/osx/protobuf-3.6.1.zip
-        unzip protobuf-3.6.1.zip -d protobuf-3.6.1 || :
     - uses: actions/checkout@v2
       name: 'Checkout'
     - name: install boost
@@ -31,6 +26,17 @@ jobs:
         cd boost_169
         chmod +x b2
         ./b2 install toolset=clang
+    - name: install protobuf
+      working-directory: ${{ github.workspace }}
+      run: |
+        wget https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.tar.gz -O /tmp/protobuf-all-3.6.1.tar.gz
+        tar xzvf /tmp/protobuf-all-3.6.1.tar.gz
+        cd protobuf-3.6.1
+        mkdir build_make
+        cd build_make
+        cmake ../cmake
+        make
+        make install
     - name: install Catch2
       working-directory: ${{ github.workspace }}
       run: |
@@ -46,7 +52,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/ -DProtobuf_LIBRARIES=${{ github.workspace }}/protobuf-3.6.1/usr/local/lib -DProtobuf_INCLUDE_DIR=${{ github.workspace }}/protobuf-3.6.1/usr/local/include/
+        cmake .. -DOPENSSL_ROOT_DIR=/usr/local/Cellar/openssl@1.1/1.1.1g/ -DOPENSSL_LIBRARIES=/usr/local/Cellar/openssl@1.1/1.1.1g/lib/
         make
     - uses: actions/upload-artifact@v1
       with:
