--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
         apt-get update -y
         apt-get upgrade -y
         apt-get install -y build-essential git python3-dev
-        apt-get wget tar zlibc libssl-dev openssl cmake python-dev
+        apt-get -y wget tar zlibc libssl-dev openssl cmake python-dev
         apt-get clean -y
     - uses: actions/checkout@v2
       name: 'Checkout'
