--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,8 @@ jobs:
     steps:
     - name: Install apt-get dependencies
       run: |
-        sudo apt-get update -y
-        sudo apt-get upgrade -y
         sudo apt-get install -y build-essential git python3-dev
-        sudo apt-get -y wget tar zlibc libssl-dev openssl cmake python-dev
+        sudo apt-get install -y wget tar zlibc libssl-dev openssl cmake python-dev
         sudo apt-get clean -y
     - uses: actions/checkout@v2
       name: 'Checkout'
