--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,6 +114,13 @@ jobs:
           nmake
           nmake install
           $env:Path += ";C:\Program Files (x86)\zlib\bin"
+      - name: "Install Boost"
+        run: |
+          Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
+          Expand-Archive boost_1_69_0.zip
+          cd .\boost_1_69_0\boost_1_69_0\
+          .\bootstrap.bat
+          .\b2 install
       - name: "Install Protobuf"
         run: |
           Invoke-WebRequest "https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.zip" -OutFile "protobuf-all-3.6.1.zip"
@@ -124,13 +131,6 @@ jobs:
           cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -Dprotobuf_MSVC_STATIC_RUNTIME=OFF ../
           nmake
           nmake install
-      - name: "Install Boost"
-        run: |
-          Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
-          Expand-Archive boost_1_69_0.zip
-          cd .\boost_1_69_0\boost_1_69_0\
-          bootstrap.bat
-          .\b2 install
       - name: 'Checkout'
         uses: actions/checkout@v2
       - name: "Build Local Proxy"
