--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,8 +117,8 @@ jobs:
       - name: "Install Boost"
         run: |
           Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
-          Expand-Archive "boost_1_69_0.zip"
-          cd .\boost_1_69_0\boost_1_69_0\
+##          Expand-Archive "boost_1_69_0.zip"
+##          cd .\boost_1_69_0\boost_1_69_0\
 ##          .\bootstrap.bat
 ##          .\b2 install
       - name: "Install Protobuf"
