--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,40 +104,41 @@ jobs:
     runs-on: windows-2019
     steps:
       - uses: ilammy/msvc-dev-cmd@v1
-#       - name: 'Install ZLIP'
-#         run: |
-#           git clone -b v1.2.8 https://github.com/madler/zlib.git
-#           cd zlib
-#           mkdir build
-#           cd build
-#           cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release ../
-#           nmake
-#           nmake install
-#           $env:Path += ";C:\Program Files (x86)\zlib\bin"
-#       - name: "Install Boost"
-#         run: |
-#           Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
-#           Expand-Archive "boost_1_69_0.zip" -Force
-#           cd .\boost_1_69_0\boost_1_69_0\
-#           .\bootstrap.bat
-#           .\b2 install
-#       - name: "Install Protobuf"
-#         run: |
-#           Invoke-WebRequest "https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.zip" -OutFile "protobuf-all-3.6.1.zip"
-#           Expand-Archive protobuf-all-3.6.1.zip
-#           cd .\protobuf-all-3.6.1\protobuf-3.6.1\cmake\
-#           mkdir build
-#           cd build
-#           cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -Dprotobuf_MSVC_STATIC_RUNTIME=OFF ../
-#           nmake
-#           nmake install
+      - name: 'Install ZLIP'
+        run: |
+          git clone -b v1.2.8 https://github.com/madler/zlib.git
+          cd zlib
+          mkdir build
+          cd build
+          cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release ../
+          nmake
+          nmake install
+          $env:Path += ";C:\Program Files (x86)\zlib\bin"
+      - name: "Install Boost"
+        run: |
+          Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
+          Expand-Archive "boost_1_69_0.zip" -Force
+          cd .\boost_1_69_0\boost_1_69_0\
+          .\bootstrap.bat
+          .\b2 install
+      - name: "Install Protobuf"
+        run: |
+          Invoke-WebRequest "https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.zip" -OutFile "protobuf-all-3.6.1.zip"
+          Expand-Archive protobuf-all-3.6.1.zip
+          cd .\protobuf-all-3.6.1\protobuf-3.6.1\cmake\
+          mkdir build
+          cd build
+          cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -Dprotobuf_MSVC_STATIC_RUNTIME=OFF ../
+          nmake
+          nmake install
       - name: 'Checkout'
         uses: actions/checkout@v2
       - name: "Build Local Proxy"
         working-directory: ${{ github.workspace }}
         run: |
-          ls
           mkdir build
           cd build
           cmake -DCMAKE_PREFIX_PATH="C:\Boost;C:\Program Files (x86)\Catch2;C:\Program Files (x86)\protobuf;C:\Program Files\OpenSSL" -G "Visual Studio 16 2019" ..\
+          ls
           msbuild localproxy.vcxproj -p:Configuration=Release
+          ls bin/Release
