--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,10 +106,9 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
       - name: 'Install OpenSSL'
         run: |
-          Invoke-WebRequest "https://www.nasm.us/pub/nasm/releasebuilds/2.15.05/win64/nasm-2.15.05-installer-x64.exe" -OutFile "nasm-2.15.05-installer-x64.exe"
-          Start-Process -FilePath ".\nasm-2.15.05-installer-x64.exe" -Verb runAs -ArgumentList '/s','/v"/qn"'
-          ls "C:\Program Files\"
-          ls "C:\Program Files (x86)\"
+          Invoke-WebRequest "https://www.nasm.us/pub/nasm/releasebuilds/2.15.05/win64/nasm-2.15.05-win64.zip" -OutFile "nasm-2.15.05-win64.zip"
+          Expand-Archive "nasm-2.15.05-win64.zip" -Force -DestinationPath "C:\NASM"
+          ls "C:\NASM"
           git clone https://github.com/openssl/openssl.git
           cd openssl
           git checkout OpenSSL_1_1_1-stable
