--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,20 +108,11 @@ jobs:
         run: |
           Invoke-WebRequest "https://www.nasm.us/pub/nasm/releasebuilds/2.15.05/win64/nasm-2.15.05-win64.zip" -OutFile "nasm-2.15.05-win64.zip"
           Expand-Archive "nasm-2.15.05-win64.zip" -Force -DestinationPath "C:\NASM"
-          ls "C:\NASM\nasm-2.15.05\"
           $env:Path += ";C:\NASM\nasm-2.15.05\"
-          git clone https://github.com/openssl/openssl.git
-          cd openssl
-          git checkout OpenSSL_1_1_1-stable
-          perl Configure VC-WIN64A
-          nmake
-          nmake install
-          $env:Path += ";C:\Program Files\OpenSSL\bin"
-      - name: 'Upload openSSL'
-        uses: actions/upload-artifact@v1
-        with:
-          name: 'openssl'
-          path: 'C:\Program Files\OpenSSL'
+          Invoke-WebRequest "https://localproxy-binaries.s3.us-west-2.amazonaws.com/windows/openssl.zip" -OutFile "openssl.zip"
+          Expand-Archive "openssl.zip" -Force -DestinationPath "C:\openssl"
+          ls 'C:\openssl'
+          $env:Path += ";C:\openssl\bin"
       - name: 'Install Catch2'
         run: |
           git clone https://github.com/catchorg/Catch2.git
@@ -144,31 +135,15 @@ jobs:
           ls "C:\Program Files\OpenSSL\bin"
       - name: "Install Boost"
         run: |
-          Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
-          Expand-Archive "boost_1_69_0.zip" -Force
-          cd .\boost_1_69_0\boost_1_69_0\
-          .\bootstrap.bat
-          .\b2 install
-      - name: 'Upload boost'
-        uses: actions/upload-artifact@v1
-        with:
-          name: 'boost'
-          path: 'C:\Boost'
+          Invoke-WebRequest "https://localproxy-binaries.s3.us-west-2.amazonaws.com/windows/boost.zip" -OutFile "boost.zip"
+          Expand-Archive "boost.zip" -Force -DestinationPath "C:\boost"
+          ls 'C:\boost\'
       - name: "Install Protobuf"
         run: |
-          Invoke-WebRequest "https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-all-3.6.1.zip" -OutFile "protobuf-all-3.6.1.zip"
-          Expand-Archive protobuf-all-3.6.1.zip
-          cd .\protobuf-all-3.6.1\protobuf-3.6.1\cmake\
-          mkdir build
-          cd build
-          cmake -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -Dprotobuf_MSVC_STATIC_RUNTIME=OFF ../
-          nmake
-          nmake install
-      - name: 'Upload protobuf'
-        uses: actions/upload-artifact@v1
-        with:
-          name: 'protobuf'
-          path: 'C:\Program Files (x86)\protobuf'
+          Invoke-WebRequest "https://localproxy-binaries.s3.us-west-2.amazonaws.com/windows/protobuf.zip" -OutFile "protobuf.zip"
+          Expand-Archive "protobuf.zip" -Force -DestinationPath "C:\protobuf"
+          ls 'C:\protobuf\
+          $env:Path += ";C:\protobuf\bin"
       - name: 'Checkout'
         uses: actions/checkout@v2
       - name: "Build Local Proxy"
@@ -176,7 +151,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DCMAKE_PREFIX_PATH="C:\Boost;C:\Program Files (x86)\Catch2;C:\Program Files (x86)\protobuf;C:\Program Files\OpenSSL" -G "Visual Studio 16 2019" ..\
+          cmake -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" ..\
           ls
           msbuild localproxy.vcxproj -p:Configuration=Release
           ls bin/Release
