--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,8 @@ if (UNIX OR APPLE)
 elseif (WIN32 OR MSVC)
     set(CUSTOM_COMPILER_FLAGS "/W4 /DYNAMICBASE /NXCOMPAT /analyze")
     set(TEST_COMPILER_FLAGS "${CUSTOM_COMPILER_FLAGS} /D_AWSIOT_TUNNELING_NO_SSL")
-    add_definitions(-D_WIN32_WINNT=_WIN32_WINNT_WIN10)
-    add_definitions(-D_BOOST_USE_WINAPI_VERSION=_WIN32_WINNT_WIN10)
+    add_definitions(-D_WIN32_WINNT=0x0A00)
+    add_definitions(-D_BOOST_USE_WINAPI_VERSION=0x0A00)
 endif ()
 
 
