--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,6 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" ..\
+          cmake -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" ..\
           ls
           msbuild localproxy.vcxproj -p:Configuration=Release
