--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,9 +135,16 @@ jobs:
           ls "C:\Program Files\OpenSSL\bin"
       - name: "Install Boost"
         run: |
-          Invoke-WebRequest "https://localproxy-binaries.s3.us-west-2.amazonaws.com/windows/boost.zip" -OutFile "boost.zip"
-          Expand-Archive "boost.zip" -Force -DestinationPath "C:\boost"
-          ls 'C:\boost\'
+          Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
+          Expand-Archive "boost_1_69_0.zip" -Force
+          cd .\boost_1_69_0\boost_1_69_0\
+          .\bootstrap.bat
+          .\b2 --help
+      - name: 'Upload boost'
+        uses: actions/upload-artifact@v1
+        with:
+          name: 'boost'
+          path: 'C:\Boost'
       - name: "Install Protobuf"
         run: |
           Invoke-WebRequest "https://localproxy-binaries.s3.us-west-2.amazonaws.com/windows/protobuf.zip" -OutFile "protobuf.zip"
