--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,10 @@ jobs:
           cd .\boost_1_69_0\boost_1_69_0\
           .\bootstrap.bat
           .\b2 --help
+          .\b2 --help-options
+          .\b2 --help-internal
+          .\b2 --help-doc-options
+          .\b2 --build-type=complete --toolset=msvc address-model=64 link=static threading=multi runtime-link=static install
       - name: 'Upload boost'
         uses: actions/upload-artifact@v1
         with:
