--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,12 +138,13 @@ jobs:
           Invoke-WebRequest "https://dl.bintray.com/boostorg/release/1.69.0/source/boost_1_69_0.zip" -OutFile "boost_1_69_0.zip"
           Expand-Archive "boost_1_69_0.zip" -Force
           cd .\boost_1_69_0\boost_1_69_0\
-          .\bootstrap.bat
+          .\bootstrap.bat --help
+          .\bootstrap.bat address-model=64 link=static threading=multi runtime-link=static
           .\b2 --help
           .\b2 --help-options
           .\b2 --help-internal
           .\b2 --help-doc-options
-          .\b2 --build-type=complete --toolset=msvc address-model=64 link=static threading=multi runtime-link=static install
+          .\b2 --build-type=complete --toolset=msvc install
       - name: 'Upload boost'
         uses: actions/upload-artifact@v1
         with:
