--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
           Expand-Archive "boost_1_69_0.zip" -Force
           cd .\boost_1_69_0\boost_1_69_0\
           .\bootstrap.bat
-          .\b2 --build-type=complete install
+          .\b2 toolset=msvc link=static variant=release address-model=64 threading=multi runtime-link=static install
       - name: 'Upload boost'
         uses: actions/upload-artifact@v1
         with:
