--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
           Expand-Archive "boost_1_69_0.zip" -Force
           cd .\boost_1_69_0\boost_1_69_0\
           .\bootstrap.bat
-          .\b2 install define=BOOST_USE_WINAPI_VERSION=0x0A00
+          .\b2 address-model=64 architecture=AMD64 define="BOOST_USE_WINAPI_VERSION=0x0A00" define="_BOOST_USE_WINAPI_VERSION=0x0A00" install
       - name: 'Upload boost'
         uses: actions/upload-artifact@v1
         with:
@@ -158,6 +158,6 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -D_WIN32_WINNT=0x0A00 -DBOOST_USE_WINAPI_VERSION=0x0A00 -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" -A Win32 ..\
+          cmake -D_WIN32_WINNT="0x0A00" -DBOOST_USE_WINAPI_VERSION="0x0A00" -D_BOOST_USE_WINAPI_VERSION="0x0A00" -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" -A x64 ..\
           ls
           msbuild localproxy.vcxproj -p:Configuration=Release
