--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,10 @@ jobs:
           cd .\boost_1_69_0\boost_1_69_0\
           .\bootstrap.bat
           .\b2 toolset=msvc address-model=64 architecture=AMD64 define="BOOST_USE_WINAPI_VERSION=0x0A00" define="_BOOST_USE_WINAPI_VERSION=0x0A00" install
+          Move-Item 'C:\Boost\include\boost-1_69\boost\' 'C:\Boost\include\'
+          ls 'C:\Boost\'
+          ls 'C:\Boost\include\'
+          ls 'C:\Boost\include\boost'
       - name: 'Upload boost'
         uses: actions/upload-artifact@v1
         with:
@@ -158,6 +162,6 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -D_WIN32_WINNT="0x0A00" -DBOOST_USE_WINAPI_VERSION="0x0A00" -D_BOOST_USE_WINAPI_VERSION="0x0A00" -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" -A x64 ..\
+          cmake -D_WIN32_WINNT="0x0A00" -DBOOST_USE_WINAPI_VERSION="0x0A00" -D_BOOST_USE_WINAPI_VERSION="0x0A00" -DBoost_USE_STATIC_LIBS=ON -DCMAKE_PREFIX_PATH="C:\Boost;C:\Program Files (x86)\Catch2;C:\protobuf;C:\openssl" -G "Visual Studio 16 2019" -A x64 ..\
           ls
           msbuild localproxy.vcxproj -p:Configuration=Release
