--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,7 +139,7 @@ jobs:
           Expand-Archive "boost_1_69_0.zip" -Force
           cd .\boost_1_69_0\boost_1_69_0\
           .\bootstrap.bat
-          .\b2 toolset=msvc address-model=64 architecture=AMD64 define="BOOST_USE_WINAPI_VERSION=0x0A00" define="_BOOST_USE_WINAPI_VERSION=0x0A00" install
+          .\b2 toolset=msvc address-model=64 define="BOOST_USE_WINAPI_VERSION=0x0A00" define="_BOOST_USE_WINAPI_VERSION=0x0A00" install
           Move-Item 'C:\Boost\include\boost-1_69\boost\' 'C:\Boost\include\'
           ls 'C:\Boost\'
           ls 'C:\Boost\include\'
